2008-03-20  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): make it
	work when called with display->image == NULL. Use a randomly
	picked canvas size for now, more later.

	(gimp_display_shell_fill): add missing call to
	gimp_display_shell_scale_changed().

	* app/gui/gui.c (gui_restore_after_callback): create an empty
	display.

2008-03-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/uri/uri-backend-gio.c (get_protocols): guard against
	g_vfs_get_supported_uri_schemes() returning NULL.

2008-03-20  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginprocedure.c
	(gimp_plug_in_procedure_set_file_proc): don't allow "file:" to be
	registered as prefix. This seems to happen with the uri-gio plug-in
	when no gvfs backends are installed.

2008-03-20  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.[ch]: shrink-wrap the newly filled
	empty display in an idle function.

2008-03-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/uri/gimpmountoperation.c: make the dialogs transient to
	the progress window if no parent or screen has been set.

2008-03-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gif-save.c: added a sanity check and abort when
	the image is too large.

2008-03-19  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_tool_events): enable the right click
	menu on the empty display.

2008-03-19  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_empty): use
	the desktop default cursor for the empty display.

2008-03-19  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_empty): the
	code to reset the cursor got lost when introducing this function.

	* app/display/gimpdisplayshell-dnd.c
	(gimp_display_shell_dnd_init): remove redundant casts.

2008-03-19  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpcanvas.c (gimp_canvas_draw_drop_zone): make the